# rust-mongodb-backup

./: .example.env  .gitignore  Cargo.toml  README.md  debug.zsh
src/: backup-admins.rs  backup-companies.rs  backup-layers.rs  backup-photos.rs  backup-points.rs  backup-projects.rs  backup-users.rs  backup.rs  insert-many.rs  models.rs
